--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 APP_NAME=Lumen
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:fSBccGydYZ555WSV4Lv9hkVgNnS0cswM+9UzWirAauU=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL=
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
 
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=default
+DB_PASSWORD=secret
